--- a/hospital/templates/doctor.html
+++ b/hospital/templates/doctor.html
@@ -29,6 +29,11 @@
 					<span slot="title">EMR Requests</span>
 				</a>
 
+				<a href="../doctor_deliverylist" class="menu-item {% block tracker %}{% endblock %}">
+					<i class="el-icon-document"></i>
+					<span slot="title">Delivery Tracker</span>
+				</a>
+
 				<a href="../doctor_history" class="menu-item {% block orderr %}{% endblock %}">
 					<i class="el-icon-setting"></i>
 					<span slot="title">Medication Records</span>
