--- a/hospital/templates/doctor_emr.html
+++ b/hospital/templates/doctor_emr.html
@@ -2,6 +2,8 @@
 
 {% block emr %}active{% endblock %}
 
+{% load static %}
+
 {% block mainbody %}
 
 {% verbatim %}
@@ -9,131 +11,121 @@
 
 <div id="app2" class="container">
   <div class="emr-table">
-    <el-table
-      ref="multipleTable"
-      :data="list"
-      stripe
-      style="width: 50%"
-      @row-click="handle"
-      @selection-change="handleSelectionChange">
-         
-      <el-table-column
-        prop="id"
-        label="Index">
-      </el-table-column>
-      <el-table-column
-        prop="order_id"
-        label="Order ID">
-      </el-table-column>
-      <el-table-column
-        prop="ward_number"
-        label="Ward No.">
-      </el-table-column>
-
-      <!--
-      <el-table-column 
-        prop="prop" 
-        label="Scan QR" 
-        width="width">
-
-        <template slot-scope="{row$index}">
-          <el-button @click="onScanQR(row)" type="warning" icon="el-icon-camera" size="mini">Scan</el-button>
-        </template>
-
-      </el-table-column>
-      -->
+    <el-table :data="list" @row-click="showQRScanner">
+      <el-table-column prop="id" label="ID"></el-table-column>
+      <el-table-column prop="order_id" label="Order ID"></el-table-column>
+      <el-table-column prop="ward_number" label="Ward Number"></el-table-column>
     </el-table>
+
+    <el-dialog :visible.sync="qrDialogVisible" width="50%">
+      <div id="qr-scanner-container">
+        <video id="preview"></video>
+      </div>
+      <div slot="footer">
+        <el-button @click="cancelQRScan">Cancel</el-button>
+      </div>
+      <script src="https://rawgit.com/schmich/instascan-builds/master/instascan.min.js"></script>
+    </el-dialog>
   </div>
 </div>
+
+
 {% endverbatim %}
 
+<link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
+<script src="https://unpkg.com/vue@2.6.14/dist/vue.min.js"></script>
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<script src="https://unpkg.com/element-ui/lib/index.js"></script>
+
 <script>
-    new Vue({
-        el: '#app2',
-        data() {
-            return {
-            list: []
+  //const QrScanner = window.QrScanner; // Define QrScanner object
+
+  new Vue({
+    el: '#app2',
+    data() {
+      return {
+        list: [],
+        qrDialogVisible: false,
+        selectedRow: null,
+        scanner: null
+      }
+    },
+
+    mounted() {
+      this.getemrList()
+    },
+
+    methods: {
+      getemrList() {
+        // Obtain EMR list
+        axios.post(ToDJ('emrList'), new URLSearchParams()).then(res => {
+          if (res.data.code === 0) {
+            console.log(res.data.data)
+            this.list = res.data.data
+          } else {
+            this.NotifyFail(res.data.data)
+          }
+        })
+      },
+
+      showQRScanner(row) {
+        this.selectedRow = row;
+        this.qrDialogVisible = true;
+        this.initQRScanner()
+      },
+
+      initQRScanner() {
+        const scanner = new Instascan.Scanner({ video: document.getElementById('preview') });
+        scanner.addListener('scan', (result) => {
+          this.postQRCode(result)
+          scanner.stop(); // Stop the scanner after a successful scan
+          this.qrDialogVisible = false; // Close the dialog after a successful scan
+        });
+        Instascan.Camera.getCameras().then(function (cameras) {
+          if (cameras.length > 0) {
+            scanner.start(cameras[0]);
+          } else {
+            console.error('No cameras found.');
+          }
+        }).catch(function (e) {
+          console.error(e);
+        });
+
+        this.scanner = scanner;
+      },
+
+      postQRCode(qrCode) {
+        // Make an AJAX call to the server to post the QR code along
+        // with the corresponding row selected in the table
+        // to the medicineRequestSelect function
+        const requestData = {
+          qr_code: qrCode,
+          row_data: this.selectedRow
+        };                          // Get the selected row data
+        axios.post('/medicineRequestSelect', requestData)
+          .then(response => {
+            console.log(response.data)
+            const index = this.list.indexOf(this.selectedRow);
+            if (index !== -1) {
+              this.list.splice(index, 1);
+            }
+          })
+          .catch(error => {
+            console.log(error)
+          })
+      },
+
+      cancelQRScan() {
+        if (this.scanner) {
+          this.scanner.stop();
         }
-        },
-        mounted() {
-        this.getemrList()
-        },
-        methods: {
-            getemrList() {
-            // Obtain EMR list
-            axios.post(ToDJ('emrList'), new URLSearchParams()).then(res => {
-                if (res.data.code === 0) {
-                    console.log(res.data.data)
-                    this.list = res.data.data
-                } else {
-                    this.NotifyFail(res.data.data)
-                }
-            })
-            },
+        this.qrDialogVisible = false;
+      }
 
-            // Purpose: For the row click
-            handle(row, event, column) {
-              console.log(row, event, column)
-              axios.post(ToDJ('medicineRequestSelect'), new URLSearchParams()).then(res => {
-                if (res.data.code === 0) {
-                  console.log(res.data.data)
-                  this.list = res.data.data
-                  let index = this.list.findIndex(item => {
-                    return item.id == row.id
-                  })
-                  if (index == -1) {
-                    this.$refs.multipleTable.toggleRowSelection(row, true);
-                    this.list.push(row)
-                  } else {
-                    this.$refs.multipleTable.toggleRowSelection(row, false);
-                    this.list.splice(index, 1)
-                  }
+    }
+  })
 
-                  } else {
-                    this.NotifyFail(res.data.data)
-                  }
-                })  
-              },
-            
-            /*
-            handle(row, event, column) {
-              console.log(row, event, column)
-              let index = this.list.findIndex(item => {
-                return item.id == row.id
-              })
-              if (index == -1) {
-                this.$refs.multipleTable.toggleRowSelection(row, true);
-                this.list.push(row)
-              } else {
-                this.$refs.multipleTable.toggleRowSelection(row, false);
-                this.list.splice(index, 1)
-              }
-              // console.log(row, event, column)
-            },
-            */
-            
-            /*
-            onScanQR(row) {
-              this.dialogFormVisible = true;
-              this.tmForm={...row}
-            },
-            */
-
-            // Success notification
-            NotifySuc(str) {
-                this.$message({
-                    message: str,
-                    type: 'success'
-                })
-			},
-            // Error notification
-			NotifyFail(str) {
-                this.$message({
-                message: str,
-                type: 'warning'
-            })
-			}
-        }
-    })
 </script>
+
+
 {% endblock %}
