--- a/hospital/templates/doctor_history.html
+++ b/hospital/templates/doctor_history.html
@@ -2,7 +2,7 @@
 {% block order %}active{% endblock %}
 {% block mainbody %}
 
-
+{% csrf_token %}
 {% verbatim %}
 
 <div id="app2" class="container">
@@ -27,26 +27,27 @@
           :data="list"
           stripe
           style="width: 100%"
-          align="center">
+          align="center"
+          >
           <el-table-column
             prop="id"
             label="ID"
-            width="60">
+            width="50">
           </el-table-column>
           <el-table-column
             prop="job_id"
             label="Job ID"
-             width="250">
+             width="150">
           </el-table-column>
           <el-table-column
             prop="order_id"
             label="Order ID"
-             width="250">
+             width="150">
           </el-table-column>
           <el-table-column
             prop="ward_number"
             label="Ward No."
-            width="110">
+            width="100">
           </el-table-column>
           <el-table-column
             prop="status"
@@ -56,12 +57,22 @@
           <el-table-column
             prop="recorded_date"
             label="Date"
-            width="150">
+            width="140">
           </el-table-column>
-            <el-table-column
+          <el-table-column
             prop="recorded_time"
             label="Time"
-            width="150">
+            width="140">
+          </el-table-column>
+          <el-table-column
+            prop="assigned_by"
+            label="Assigned By"
+            width="155">
+          </el-table-column>
+          <el-table-column
+            prop="received_by"
+            label="Received By"
+            width="155">
           </el-table-column>
         </el-table>
       </div>
@@ -72,6 +83,7 @@
 
 
 <script>
+  
   new Vue({
     el: '#app2',
     data() {
